@@ -128,6 +128,9 @@ disables caching of game data.
 .B --nosound
 runs the game without sounds and music.
 .TP
+.B --nomusic
+runs the game without only music.
+.TP
 .B --path
 prints the name of the game data directory and exits.
 .TP
