@@ -2,6 +2,10 @@ This is meant to be a concise list of player-visible changes (very minor
 changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
+Version 1.5.3+svn:
+  * Miscellaneous and bug fixes
+   * new --nomusic commandline option to disable music for the session
+
 Version 1.5.3:
   * Editor2
     * Rotate clipboard 60 degrees clockwise or counter-clockwise, ctrl+r
