@@ -70,6 +70,7 @@ Version 1.5.3+svn:
    * Added some more compiler workarounds for MSVC9.
    * Removed the --small-gui build option, starting Wesnoth with the
      --smallgui parameter achieves the same
+   * new --nomusic commandline option to disable music for the session
 
 Version 1.5.3:
  * Campaigns
